syntax = "proto3";

option go_package = "github.com/xprasetio/be-ecommerce-furniture-grpc.git/pb/auth";

import "common/base_response.proto";
import "buf/validate/validate.proto";

package auth;



service AuthService {
    // rpc Login(LoginRequest) returns (LoginResponse);
    rpc Register(RegisterRequest) returns (RegisterResponse);
}

message RegisterRequest {
    string full_name = 1 [(buf.validate.field).string = {min_len: 1, max_len: 100}];
    string email = 2 [(buf.validate.field).string = {email:true,min_len: 1, max_len: 100}];
    string password = 3 [(buf.validate.field).string = {min_len: 1, max_len: 100}];
    string password_confirmation = 4 [(buf.validate.field).string = {min_len: 1, max_len: 100}];
}

message RegisterResponse {
    common.BaseResponse base = 1;
}